src/objects/CPQ_TransportMap__c.object
<CustomObject>
    <description>De-normalized table to capture Item code vs Transport % vs Account mapping</description>
    <fields>
        <fullName>CPQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the product that the transport % maps to</description>
        <inlineHelpText>Reference to the product that the transport % maps to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transport Maps</relationshipLabel>
        <relationshipName>Transport_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True indicates that the mapping is active and being used</description>
        <inlineHelpText>True indicates that the mapping is active and being used</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Code__c</fullName>
        <formula>CPQ_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the product that the transport % maps to</description>
        <inlineHelpText>Reference to the product that the transport % maps to</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Transport Maps</relationshipLabel>
        <relationshipName>Transport_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Transport_Percent__c</fullName>
        <description>Value of the transport %</description>
        <inlineHelpText>Value of the transport %</inlineHelpText>
        <label>Transport %</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Transport Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Account__c</columns>
        <columns>CPQ_Product__c</columns>
        <columns>CPQ_Product_Code__c</columns>
        <columns>CPQ_Transport_Percent__c</columns>
        <columns>CPQ_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TMAP-{00000000}</displayFormat>
        <label>TMap ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transport Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>